# alvis

./: .dockerignore  .gitignore  404.html  Makefile  README.md  classes.mmd  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
about/changelog/: index.html
alvis/: cli.py
alvis/config/: __init__.py  db_config.py
alvis/data_ingest/: downloader.py  ingest.py
docker/: Dockerfile  README.md  db-compose.yaml
docs/: packages.mmd
docs/homework/: week-01.md
homework/week-01/: index.html
search/: search_index.json
terraform/: main.tf  variables.tf
tests/: conftest.py
